# ai-learning

autonomous-ai-agents-langchain/: pyproject.toml
autonomous-ai-agents-langchain/03-ai-agents-deep-dive/: 00_simple_agent.py  01-complex-query-agent.py  02-automated-agent.py  03-interactive_agent.py  agent.py
autonomous-ai-agents-langchain/04-ai-gents-with-langgraph/: 01-simple_agent-langgraph.py  02-simple_agent-langgraph-tools.py  03-simple_agent-langgraph-tools-memory.py  04-simple_agent-langgraph-tools-memory-human-in-loop.py
autonomous-ai-agents-langchain/05-financial-report-writer-agent/: 01-finance_agent.py
ibm-ai-engineering-pc/: justfile  pyproject.toml
ibm-ai-engineering-pc/01-machine-learning-with-python/02-logistic-and-linear-regression/: 02-lab-multiple-linear-regression.py
ibm-ai-engineering-pc/01-machine-learning-with-python/03-building-supervised-learning-models/: 01-multi-class-classification.py
ibm-ai-engineering-pc/C01-machine-learning-with-python/M02-logistic-and-linear-regression/: 01-lab-simple-linear-regression.py  02-lab-multiple-linear-regression.py  03-lab-logistic-regression.py
ibm-ai-engineering-pc/C01-machine-learning-with-python/M03-building-supervised-learning-models/: 01-multi-class-classification.py  02-decision-trees.py  03-regression-trees.py  04-decision-trees-and-svm.py  05-knn-classification.py  06-random-forests-and-xgboost.py
ibm-ai-engineering-pc/C01-machine-learning-with-python/M04-building-unsupervised-learning-models/: 01-k-means-clustering.py  02-comparing-dbscan-and-hdbscan.py  03-pca.py  04-tsne-and-umap.py
ibm-ai-engineering-pc/C01-machine-learning-with-python/M05-evaluating-and-validating-machine-learning-models/: 01-evaluating-classification-models.py  02-evaluating-random-forest.py  03-evaluating-k-means-clustering.py  04-regularisation-linear-regression.py  (+1 more)
modern-automated-ai-agents/: justfile  pyproject.toml
modern-automated-ai-agents/01-introduction-to-ai-agents/: 01-crewai-hello-world.py  02-langgraph-hello-world.py  ai.txt
modern-automated-ai-agents/02-under-the-hood-of-ai-agents/: 01-langchain-plus-crewai.py  02-custom-search-agent.py  03-trip-advisor-agent.py
modern-automated-ai-agents/03-building-an-ai-agent/: 01-building-custom-tools.py
modern-automated-ai-agents/04-testing-and-evaluating-agents/: 01-evaluating-llms-with-rubrics.ipynb  01-evaluating-llms-with-rubrics.py
modern-automated-ai-agents/05-expanding-on-react-with-planning-and-reflection/: 01-plan-and-execute-langgraph.py  02-reflect-langraph.py
(+15 files in other folders)
