[project]
name = "ibm-ai-engineering-pc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "contextily==1.6.2",
    "geopandas==1.0.1",
    "hdbscan==0.8.40",
    "jupyter>=1.1.1",
    "jupytext>=1.16.7",
    "matplotlib==3.9.3",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "plotly==5.24.1",
    "scikit-learn==1.6.0",
    "seaborn==0.13.2",
    "shapely==2.0.6",
    "xgboost==2.1.3",
    "umap-learn==0.5.7",
]
