[project]
name = "modern-automated-ai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.4.0",
    "alpaca-trade-api>=0.26",
    "crewai>=0.102.0",
    "crewai-tools>=0.36.0",
    "datasets>=3.3.2",
    "diffusers>=0.32.2",
    "duckduckgo-search>=7.3.2",
    "google-search-results>=2.4.2",
    "jupyter>=1.1.1",
    "langchain-community>=0.3.18",
    "langgraph>=0.2.74",
    "matplotlib>=3.10.0",
    "onnxruntime>=1.20.1",
    "openai>=1.63.2",
    "pinecone-client>=6.0.0",
    "python-dotenv>=1.0.1",
    "streamlit>=1.42.2",
    "supabase>=2.13.0",
    "swarm",
    "transformers>=4.46.3",
]

[tool.uv.sources]
swarm = { git = "https://github.com/openai/swarm.git" }

[dependency-groups]
dev = [
    "jupytext>=1.16.7",
]
